[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vacuum-mas"
version = "1.0.0"
description = "Multi-agent cooperative vacuum cleaning on a discrete grid (peer-to-peer coordination)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gui = ["pygame>=2.5.0"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vacuum_mas*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
